# deconwolf

./: .gitignore  BACKENDS.md  MANIFEST.in  README_DWPY.md  pyproject.toml  setup.py
configs/: dapi_60x_oil.yaml  gfp_60x_oil.yaml  synthetic_100x_oil.yaml
demo/: DIRECTORY_STRUCTURE.md  README.md  benchmark_all.py  benchmark_jax_optimizations.py  benchmark_new_dataset.py  benchmark_optimizations.py  benchmark_scipy.py  benchmark_synthetic.py  benchmark_tile_sizes.py  cleanup_demo.sh  run_all_backends.py  run_dapi_jax_shb.py  run_synthetic_jax_shb.py
docs/: PSF_SIZING.md
dwpy/: __init__.py  config_loader.py  config_schema.py  dw_auto.py  dw_dask.py  dw_fast.py  dw_fftw.py  dw_jax.py  dw_numba.py  dw_numpy.py  microscope_psf.py  psf.py  psf_utils.py  workflow.py
python/: __init__.py  dexp_deconv.py  dw_auto.py  dw_numpy.py  psf.py
src/trafo/src/: trafo.c
tests/: test_dw_backends.py  test_numpy_jax_parity.py  test_psf_bw.py  test_psf_centering.py  test_psf_gl.py
util/: generate_bw_psfs.py  generate_gl_psfs.py  run_deconv_variants.py
